--- a/public_html/Styles.css
+++ b/public_html/Styles.css
@@ -12,5 +12,14 @@ h2{
     text-align: center;
     padding: 5%;
     width: 100%;
+}
 
+img{
+    width: 220px;
+    border-radius: 50px;
+}
+
+p{
+    color: #FFFFFF;
+    font-size: 22px;
 }
